hphp/hack/test/typecheck/reified_generics/consistent_construct_parent.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

<<__ConsistentConstruct>>
class A {
  public function f(): void {
    new static();
  }
}

class B<reify T> extends A {}
